force-app/main/default/objects/XFILES__Cloud_Storage_Provider__c/XFILES__Cloud_Storage_Provider__c.object-meta.xml
<CustomObject>
    <description>Cloud Storage Providers</description>
    <label>Cloud Storage Provider</label>
    <nameField>
        <label>Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud Storage Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>