force-app/main/default/objects/XFILES__Cloud_Storage_Provider__c/fields/XFILES__API_Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>XFILES__API_Auth_Token__c</fullName>
    <description>Optional, if service is required enter the value.</description>
    <inlineHelpText>Could Storage Service Provider API Token (required if using token based auth)</inlineHelpText>
    <label>API Auth Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>