force-app/main/default/objects/XFILES__Cloud_Storage_Provider__c/fields/XFILES__Authentication_Type__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Authentication_Type__c</fullName>
    <description>Authentication Type</description>
    <inlineHelpText>Authentication Type</inlineHelpText>
    <label>Authentication Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Username/Password</fullName>
                <default>true</default>
                <label>Username/Password</label>
            </value>
            <value>
                <fullName>API Key/Secret Only</fullName>
            </value>
            <value>
                <fullName>Token Based (OAuth 2.0)</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>