force-app/main/default/objects/XFILES__Cloud_Storage_Provider__c/fields/XFILES__GDrive_Root_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>XFILES__GDrive_Root_Folder_Id__c</fullName>
    <description>This field is used save GDrive Root Folder Id or Amazon-S3 region.</description>
    <inlineHelpText>This field is used save GDrive Root Folder Id or Amazon-S3 region.</inlineHelpText>
    <label>GDrive Root Folder Id / Amazon-S3 Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>