force-app/main/default/objects/XFILES__Cloud_Storage_Provider__c/fields/XFILES__Is_Default_Provider__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Is_Default_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a Default Provider</description>
    <inlineHelpText>This is  a Default Provider</inlineHelpText>
    <label>Team Drive</label>
    <type>Checkbox</type>
</CustomField>