force-app/main/default/objects/XFILES__Cloud_Storage_Provider__c/fields/XFILES__IsActive__c.field-meta.xml
<CustomField>
    <fullName>XFILES__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Service is active or not</description>
    <inlineHelpText>Check if active</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>