force-app/main/default/objects/XFILES__Cloud_Storage_Provider__c/fields/XFILES__One_Drive_Api_Token__c.field-meta.xml
<CustomField>
    <fullName>XFILES__One_Drive_Api_Token__c</fullName>
    <label>One Drive Api Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>