force-app/main/default/objects/XFILES__Cloud_Storage_Provider__c/fields/XFILES__Org_Based_Authentication__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Org_Based_Authentication__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck, if user based authentication</description>
    <inlineHelpText>Uncheck, if user based authentication. 
Ex: S3 - IAM</inlineHelpText>
    <label>Org Based Authentication</label>
    <type>Checkbox</type>
</CustomField>