force-app/main/default/objects/XFILES__Cloud_Storage_Provider__c/fields/XFILES__Password__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Password__c</fullName>
    <description>Cloud Storage Provider Service Password or Secret Key</description>
    <inlineHelpText>Cloud Storage Provider Service Password or Secret Key</inlineHelpText>
    <label>Password / Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>