force-app/main/default/objects/XFILES__Cloud_Storage_Provider__c/fields/XFILES__Prefix__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Prefix__c</fullName>
    <description>Prefix is used for every file name defined by provider</description>
    <inlineHelpText>Prefix is used for every file name defined by provider</inlineHelpText>
    <label>Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>