force-app/main/default/objects/XFILES__Cloud_Storage_Provider__c/fields/XFILES__Provider_Type_Others__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Provider_Type_Others__c</fullName>
    <description>Provider Type (if others)</description>
    <inlineHelpText>Provider Type (if others)</inlineHelpText>
    <label>Provider Type (if others)</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>