force-app/main/default/objects/XFILES__Cloud_Storage_Provider__c/fields/XFILES__Root_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Root_Folder_Name__c</fullName>
    <description>Specify root folder name.</description>
    <inlineHelpText>Specify root folder/bucket name.</inlineHelpText>
    <label>Root Folder/Bucket Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>