force-app/main/default/objects/XFILES__Cloud_Storage_Provider__c/fields/XFILES__Service_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Service_Endpoint_URL__c</fullName>
    <description>Cloud Storage Provider Service Endpoint URL</description>
    <inlineHelpText>Cloud Storage Provider Service Endpoint URL</inlineHelpText>
    <label>Service Endpoint URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>