force-app/main/default/objects/XFILES__Cloud_Storage_Provider__c/fields/XFILES__Username__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Username__c</fullName>
    <description>Cloud Storage Provider Service Username or Access Key</description>
    <inlineHelpText>Cloud Storage Provider Service Username or Access Key</inlineHelpText>
    <label>Username / Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>